application/resources/style.css
/* 
 * style.css — TDevShortener
 * today is 7/10/12, it is now 5:29 PM
 * created by marcostrovilho
 * see LICENSE for details.
 */
body { 
	margin: 0;
	padding: 0;
	border: 0;
	height: 100%; 
	min-width: 660px;
	font-family: 'Lekton', Courier, Verdana, sans-serif; 
}
/* Header */
.logo-container {
	position: absolute;
	top:0;
    height: 160px;
    width: 100%;
	background-color: white;
}
.logo {
	width:385px;
	margin-top: 25px;
	height:110px;
	background: url('logo.png') no-repeat top center;
	margin-left: auto;
	margin-right: auto; 
}
/* Footer	 */
.footer {
	margin-top:30px;
	background-color: #F2F2F2;
    height: 25px;
    left: 0;
    right: 0;
}
.footer a {
	font-size: 12px;
	text-align: center;
	color: #52240E;
	text-decoration: none;
}
/* Second part */
.content-area {
	background-color: #F2F2F2;
	min-height: 340px;
	overflow:auto;	
	height: 100%;
}
.inputArea {
	margin-top: 160px; /* From Header */
	margin-bottom: 40px; /* From Footer */
}
.textField { 
	height: 32px;
	text-align: center;
 	padding-right: 30px;
	border: solid 1px #BFBFBF;
	outline: 0;
	font-size: 18px;
	font-weight: bold;
	font-family: 'Lekton', Courier, Verdana, sans-serif; 
	width: 400px;
	margin-top: 40px;
	margin-bottom: 40px;
}
.textField:hover,
.textField:focus { 
	border-color: rgba(137,74,30, 0.45); 
	-webkit-box-shadow: rgba(137,74,30, 1) 0px 0px 8px;
}
.button {
    width: 26px;
    height: 26px;
    border: none;
    cursor: pointer;
    margin-left: -38px;
    padding-top: 8px;
	background: url('buttonBg.png') no-repeat;
}
@-webkit-keyframes rotation {
    from {-webkit-transform: rotate(0deg);}
    to   {-webkit-transform: rotate(359deg);}
}
	
/* MESSAGE CENTER */
.ttw-simple-notification-wrapper {
    width:250px;
}

.ttw-simple-notification-tmp {
	opacity:0;
	bottom:-9999999px;
	right:-9999999px;
}
.ttw-simple-notification {
    display:none;
    opacity:0;
    height: 30px;
    width: 250px;
    box-shadow: inset 0 0 2px rgba(255, 255, 255, .3), 0 0 6px rgba(0, 0, 0, .4);
    -moz-box-shadow: inset 0 0 2px rgba(255, 255, 255, .3), 0 0 6px rgba(0, 0, 0, .4);
    -webkit-box-shadow: inset 0 0 2px rgba(255, 255, 255, .3), 0 0 6px rgba(0, 0, 0, .4);
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
	background: white;
	margin-bottom: 20px;
}
.ttw-simple-notification .icon{
    display:none;
}

.ttw-simple-notification .message {
    width:240px;
	text-align: center;
    padding-top: 8px;
    color:#D84517;
    font-size:16px;
    font-weight:bold;
}

.ttw-simple-notification a {
    color:#D84517;
    font-size:16px;
    font-weight:bold;
}

.ttw-simple-notification .close {
    width: 17px;
    height: 17px;
    display: block;
    position: relative;
    top: -35px;
    left: -125px;
    opacity: .6;
    border-radius: 9px;
    -moz-border-radius: 9px;
    -webkit-border-radius: 9px;
	background-color: gray;
}

.ttw-simple-notification .close:after {
    content: 'x';
    position: absolute;
    left: 5px;
    bottom: 3px;
    color: black;
    font-size: 12px;
    font-weight: bold;
    text-shadow: 0 1px 0 rgba(0, 0, 0, .6);
}
.ttw-simple-notification .close:hover:after {
    color: #bbb;
}

